<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payments_receiver"
                android:textSize="22sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/for_text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_detailed_billing_information_to_receive_payments"
                android:textSize="15sp"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/for_text"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstNameTIL">

                    <EditText
                        android:id="@+id/firstNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:layout_marginStart="5dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastNameTIL">

                    <EditText
                        android:id="@+id/lastNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:layout_marginStart="5dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/streetTIL">

                    <EditText
                        android:id="@+id/streetEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/street"
                        android:inputType="text"
                        android:layout_marginStart="5dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/HouseNumberTIL">

                    <EditText
                        android:id="@+id/houseNumberEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/house_number"
                        android:inputType="text"
                        android:layout_marginStart="5dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/postalCodeTIL">

                    <EditText
                        android:id="@+id/postalCodeEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/postal_code"
                        android:inputType="textPostalAddress"
                        android:layout_marginStart="5dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cityTIL">

                    <EditText
                        android:id="@+id/cityEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:hint="@string/city"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/stateOrRegionTIL">

                    <EditText
                        android:id="@+id/stateOrRegionEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/state_or_region"
                        android:inputType="text"
                        android:layout_marginStart="5dp"/>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </ScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line">

            </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/ownDataCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:layout_weight="0.51">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Cancel"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"
                    android:textSize="20sp"
                    android:gravity="center"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/line"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="false"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/ownDataSave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Save"
                    android:enabled="false"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"
                    android:textSize="20sp"
                    android:gravity="center"/>

            </RelativeLayout>

        </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>