<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2EEFA"
    tools:context=".TabSettings.BillingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:padding="20dp"
                        android:text="@string/payments_receiver"
                        android:textColor="@color/for_text"
                        android:textSize="22sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:padding="10dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/add_detailed_billing_information_to_receive_payments"
                        android:textColor="@color/for_text"
                        android:textSize="15sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailTIL"
                        android:layout_width="match_parent"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/firstNameEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:textSize="15sp"
                            android:hint="@string/first_name"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lastNameTIL"
                        android:layout_width="match_parent"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/lastNameEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:textSize="15sp"
                            android:hint="@string/last_name"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/streetTIL"
                        android:layout_width="match_parent"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/streetEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:textSize="15sp"
                            android:hint="@string/street"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/HouseNumberTIL"
                        android:layout_width="match_parent"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/houseNumberEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:textSize="15sp"
                            android:hint="@string/house_number"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/postalCodeTIL"
                        android:layout_width="match_parent"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/postalCodeEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:textSize="15sp"
                            android:hint="@string/postal_code"
                            android:inputType="textPostalAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/cityTIL"
                        android:layout_width="match_parent"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/cityEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:textSize="15sp"
                            android:hint="@string/city"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/stateOrRegionTIL"
                        android:layout_width="match_parent"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/stateOrRegionEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:textSize="15sp"
                            android:hint="@string/state_or_region"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/saveData"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:text="Save"
                        android:textColor="@color/white"
                        android:textSize="15sp" />



                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>