<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:id="@+id/layoutLog"
    android:layout_gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15sp"
        android:layout_marginTop="15dp"
        android:layout_gravity="end"
        android:text="@string/sign_up"
        android:textColor="@color/for_text"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center_horizontal"
        android:rotation="-10"
        android:layout_marginTop="15dp"
        android:src="@drawable/for_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/for_reg_text"
        android:textSize="25sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/register_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_user" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailTIL">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailAddress"
                    android:layout_marginStart="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--            <EditText-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginLeft="5dp"-->
            <!--                android:bufferType="spannable"-->
            <!--                android:hint="@string/email"-->
            <!--                android:inputType="textEmailAddress"-->
            <!--                android:saveEnabled="true"-->
            <!--                android:textColorHint="@color/bit_white"-->
            <!--                android:textSize="18sp"-->
            <!--                android:typeface="monospace" />-->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/register_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_lock" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordTIL">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:layout_marginStart="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--            <EditText-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginStart="5dp"-->
            <!--                android:bufferType="spannable"-->
            <!--                android:hint="@string/password"-->
            <!--                android:inputType="textEmailAddress"-->
            <!--                android:saveEnabled="true"-->
            <!--                android:textColorHint="@color/bit_white"-->
            <!--                android:textSize="18sp"-->
            <!--                android:typeface="normal" />-->

        </LinearLayout>


            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/forgotPass"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"/>


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_marginTop="15dp"
            android:background="@drawable/for_button"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:background="@color/bit_white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="16sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <RelativeLayout
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:background="@color/bit_white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/google_logo"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/facebook_logo"/>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>